[gd_scene load_steps=5 format=3 uid="uid://c8nxqfm5ktqxs"]

[ext_resource type="Script" path="res://scripts/ui/game_dialog.gd" id="1_dialog"]
[ext_resource type="FontFile" uid="uid://du3smcf51mvpm" path="res://assets/fonts/Audiowide-Regular.ttf" id="2_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0, 0, 0, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font = ExtResource("2_font")
font_size = 48

[node name="GameDialog" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dialog")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -200.0
offset_right = 540.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level Complete!"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="ScoreContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ScoreLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScoreContainer"]
layout_mode = 2
text = "Score: 0"
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32

[node name="ComboContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ComboLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ComboContainer"]
layout_mode = 2
text = "Combo Bonus: 0"
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(1, 1, 0, 1)

[node name="TotalContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TotalLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TotalContainer"]
layout_mode = 2
text = "Total: 0"
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 36

[node name="ActionLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Press SPACE for next level"
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
horizontal_alignment = 1